--- a/styles.css
+++ b/styles.css
@@ -98,17 +98,17 @@ h3 {
     text-align: center;
   }
   .avatar {
-    width: 150px;
-    height: 150px;
+    width: 110px;
+    height: 110px;
     border-radius: 50%;
+    background-color: transparent;
     object-fit: cover;
     margin-bottom: -7rem;
     position: relative;
-    top: -125px;
+    top: -130px;
     transition: transform 0.5s ease;
-  }
-  .avatar:hover {
-    transform: rotateY(180deg);
+    border: 4px solid #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
 
   .name-and-description {
@@ -141,9 +141,20 @@ h3 {
     font-size: 1.5rem;
     transition: color 0.3s ease;
   }
-
-  .social-links a:hover {
-    color: #ccc;
+  .fa-github-alt {
+    color: black;
+  }
+  .fa-linkedin-in {
+    color: #0075b5;
+  }
+  .fa-envelope {
+    color: #fff;
+  }
+  .fa-instagram {
+    color: #dd2a7b;
+  }
+  .fa-twitter {
+    color: #08a0e9;
   }
 }
 .python-logo {
@@ -156,7 +167,34 @@ h3 {
   max-width: 50px;
   height: auto;
 }
-
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 30;
+}
+.crest {
+  width: 50px;
+  height: 50px;
+  border-radius: 25%;
+}
+.credit {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: 16px;
+  z-index: 10;
+}
+/* .credit:hover {
+  text-decoration: underline;
+} */
 @keyframes moveInCircle {
   0% {
     transform: rotate(0deg);
